# FRACTEL

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docker-publish.yml
fractel/: fractel.py
tests/: test_fractel.py  test_fractel_calibrate.py  test_fractel_interpolate.py  test_fractel_run.py  test_fractel_simulate.py
tests/test_data/: simulated_data.extra.npz  simulated_data.npz  test_mudata.h5mu
